--- a/login.ejs
+++ b/login.ejs
@@ -35,7 +35,7 @@
                 </div>
 
                 <div>
-                    <p id="sign">Don't have an account? <a href="">Sign Up</a></p>
+                    <p id="sign">Don't have an account? <a href="/register">Sign Up</a></p>
                 </div>
             </form>
         </div>
