--- a/public/css/login.css
+++ b/public/css/login.css
@@ -5,36 +5,60 @@
     font-family: Helvetica, sans-serif;
 }
 
-h1 {
-    font-size: 2rem;
-}
-
 main {
     width: 100%;
     height: 100vh;
     display: flex;
-    background-image: url('bgRegister.jpg');
+}
+
+.info {
+    background-image: url('./images/bgLanding.jpg');
     background-position: center;
+    background-size: auto;
     background-repeat: no-repeat;
-    background-size: cover;
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
     align-items: center;
-    justify-content: center;
+    text-shadow: rgba(51, 51, 51, 0.3) 0px 3px 8px;
+    font-weight: 600;
     text-align: center;
 }
 
-.container {
-    background-color: #FFFFF0;
-    padding: 4rem 1rem;
-    border-radius: 1rem;
-    width: 30%;
+h1 {
+    font-size: 3.6rem;
+    word-spacing: 0.5rem;
+    margin-top: 10%;
+}
+
+p {
+    width: 70%;
+    font-size: 1.6rem;
+    line-height: 2.3rem;
+}
+
+.loginDiv {
+    background-color:#FFFFF0;
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    text-align: center;
+    justify-content: center;
+}
+
+.loginDiv h3 {
+    font-size: 1.6rem;
+    color: #333333;
+    margin-bottom: 2rem;
 }
 
 form {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1.4rem;
     justify-content: center;
-
 }
 
 form div {
@@ -44,7 +68,13 @@ form div {
     align-items: center;
 }
 
-input {
+.Icon {
+    font-size: 1.6rem;
+    fill: #8B4513;
+    color: #8B4513;
+}
+
+.loginInput {
     border: none;
     border-radius: 2rem;
     background-color: #87CEEB;
@@ -66,4 +96,8 @@ button {
 
 button:hover {
     background-color: #095472;
+}
+
+#sign {
+    font-size: 1rem;
 }
