--- a/public/css/login.css
+++ b/public/css/login.css
@@ -46,6 +46,23 @@ p {
     gap: 1rem;
     text-align: center;
     justify-content: center;
+    position: relative;
+}
+
+#messageDiv {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 1rem;
+    left: 0;
+}
+
+#message {
+    text-align: center;
+    font-size: 1.2rem;
+    color: red;
 }
 
 .loginDiv h3 {
