--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,7 +24,7 @@
             </div>
             <h3>User Login</h3>
 
-            <form action="" method="get">
+            <form action="/" method="post">
                 <div>
                     <ion-icon name="person-circle-outline" class="Icon"></ion-icon>
                     <input type="text" name="username" class="loginInput">
