Yay! Spoonacular API implemented!

--- a/views/kitchen.ejs
+++ b/views/kitchen.ejs
@@ -40,89 +40,7 @@
             </div>
             <hr>
             <div class="recipes">
-                <div class="recipe">
-                    <img src="/css/images/test.jpg" alt="">
-                    <div class="description">
-                        <p class="name">Cake</p>
-                    </div> 
-                    <p class="extra">author</p>
-                    <p class="extra">image</p>
-                    <p class="extra">missingIngredients</p>
-                    <p class="extra">timeOfPreparation</p>
-                    <p class="extra">moreInfoURL</p>
-
-                    <p class="extra">dairyFree</p>
-                    <p class="extra">glutenFree</p>
-                    <p class="extra">keto</p>
-                    <p class="extra">vegan</p>
-                    <p class="extra">vegetarian</p>
-                </div>
-                <div class="recipe">
-                    <img src="/css/images/test.jpg" alt="">
-                    <div class="description">
-                        <p class="name">Cake</p>
-                    </div>
-                </div>
-                <div class="recipe">
-                    <img src="/css/images/test.jpg" alt="">
-                    <div class="description">
-                        <p class="name">Cake</p>
-                    </div>
-                </div>
-                <div class="recipe">
-                    <img src="/css/images/test.jpg" alt="">
-                    <div class="description">
-                        <p class="name">Cake</p>
-                    </div>
-                </div>
-                <div class="recipe">
-                    <img src="/css/images/test.jpg" alt="">
-                    <div class="description">
-                        <p class="name">Cake</p>
-                    </div>
-                </div>
-                <div class="recipe">
-                    <img src="/css/images/test.jpg" alt="">
-                    <div class="description">
-                        <p class="name">Cake</p>
-                    </div>
-                </div>
-                <div class="recipe">
-                    <img src="/css/images/test.jpg" alt="">
-                    <div class="description">
-                        <p class="name">Cake</p>
-                    </div>
-                </div>
-                <div class="recipe">
-                    <img src="/css/images/test.jpg" alt="">
-                    <div class="description">
-                        <p class="name">Cake</p>
-                    </div>
-                </div>
-                <div class="recipe">
-                    <img src="/css/images/test.jpg" alt="">
-                    <div class="description">
-                        <p class="name">Cake</p>
-                    </div>
-                </div>
-                <div class="recipe">
-                    <img src="/css/images/test.jpg" alt="">
-                    <div class="description">
-                        <p class="name">Cake</p>
-                    </div>
-                </div>
-                <div class="recipe">
-                    <img src="/css/images/test.jpg" alt="">
-                    <div class="description">
-                        <p class="name">Cake</p>
-                    </div>
-                </div>
-                <div class="recipe">
-                    <img src="/css/images/test.jpg" alt="">
-                    <div class="description">
-                        <p class="name">Cake</p>
-                    </div>
-                </div>
+                <!--Recipes from Spoonacular API here!-->
             </div>
         </div>
     </main>
